# Static-Single-Point-Positioning

./: .gitignore  CMakeLists.txt  NRinexUtils.cpp  NRinexUtils.h  README.md  datetime.cpp  main.cpp  rinex.cpp
data/: obsdata.22o  satpos.txt  true pos.txt
result/: SPP_Position_Estimation_and_Analysis.docx  main.py  plotting_spp.m  solution.txt  solution_with_dops.txt  ~$P_Position_Estimation_and_Analysis.docx  ~WRL2982.tmp
scripts/: main.py
